--- a/software.html
+++ b/software.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div id="page_content">
-            <p class="footertext" style><strong>Efforts have been made to limit software to free and open-source options. Some paid for options are included when no better alternative exists (to my knowledge). Subscription models are excluded entirely.</strong></p>
+            <p class="introtext">Efforts have been made to limit software to free and open-source options. Some paid for options are included when no better alternative exists (to my knowledge). Subscription models are excluded entirely.</p>
         	<h3>Downloadable:</h3>
             <ul>
                 <li><a href="https://atom.io">Atom Editor</a> - Highly modifiable text editor with full GitHub integration [Linux, Mac, Windows]</li>
@@ -65,7 +65,7 @@
             </ul>
         </div>
         <footer>
-            <p class="footertext">All opinions presented are solely my own
+            <p>All opinions presented are solely my own
             <br/>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
             <br/>Contact:
             <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
