--- a/books.html
+++ b/books.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div id="page_content">
-            <p class="footertext" style><strong>Recommendations are made purely based on my own subjective reading experience.  Audiobooks are included based on the content of the book, not the presentation.</strong></p>
+            <p class="introtext">Recommendations are made purely based on my own subjective reading experience.  Audiobooks are included based on the content of the book, not the presentation.</p>
             <h3>Audiobooks:</h3>
         	<ul>
                 <li><a href="https://www.goodreads.com/series/40957-the-hitchhiker-s-guide-to-the-galaxy">Adams, D. - The Hitchhiker's Guide to the Galaxy [1 - 5]:</a> Occasionally philosophical, often contemplative, and consistently hilarious, this is a sci-fi series full of imagination and British charm. The audiobooks are marvellously voiced, too.</li>
@@ -41,8 +41,7 @@
             </ul>
         </div>
         <footer>
-            <p class="footertext">All opinions presented are solely my own
-            <br/>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
+            <p style="text-align:center;">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
             <br/>Contact:
             <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
         </footer>
