--- a/music.html
+++ b/music.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div id="page_content">
-            <p class="footertext" style><strong>Recommendations are made purely based on my own subjective listening experience. Artists are grouped by genre umbrella, so there will undoubtedly be some level of subjectivity involved; unfortunately, I can't please everyone.</strong></p>
+            <p class="introtext">Recommendations are made purely based on my own subjective listening experience. Artists are grouped by genre umbrella, so there will undoubtedly be some level of subjectivity involved; unfortunately, I can't please everyone.</p>
             <h3>Avante-garde Metal:</h3>
         	<ul>
                 <li><a href="https://www.youtube.com/watch?v=UZzYxGZ7Hmc">Igorrr:</a> Alias and project of French musician, Gautier Serre, Igorrr is a ludicrous combination of baroque, EDM, and black metal.</li>
@@ -68,8 +68,7 @@
             </ul>
         </div>
         <footer>
-            <p class="footertext">All opinions presented are solely my own
-            <br/>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
+            <p style="text-align:center;">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
             <br/>Contact:
             <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
         </footer>
