--- a/cv.html
+++ b/cv.html
@@ -28,8 +28,7 @@
         	<h3>Coming somewhat soon</h3>
         </div>
         <footer>
-            <p class="footertext">All opinions presented are solely my own
-            <br/>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
+            <p style="text-align:center;">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
             <br/>Contact:
             <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
         </footer>
