--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         		<h2>A combination blog, portfolio, and informative resource</h2>
             </div>
         </div>
-        <div id="page_content">
+        <div id="page_content">            
+        	<h3>About the author:</h3>
+            <img id="headshot"src="img/headshot_2021.png" alt="Headshot of the author, Corey Ratcliffe, taken in 2021.">
         	<h3>Included on this site is:</h3>
         	<ul>
                 <li>An overview of and introduction to the work I have done since starting my PhD in neuroimaging, which has focused on imaging neural networks in Epilepsy and Neurocysticercosis</li>
