--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         </div>
         <div id="page_content">            
         	<h3>About the author:</h3>
-            <img id="headshot"src="img/headshot_2021.png" alt="Headshot of the author, Corey Ratcliffe, taken in 2021.">
+            <div class="row">
+                <img class="col" src="img/headshot_2021.png" alt="Headshot of the author, Corey Ratcliffe, taken in 2021.">
+                <p class="col">This is a test I am writing it to.</p>
+            <div/>
         	<h3>Included on this site is:</h3>
         	<ul>
                 <li>An overview of and introduction to the work I have done since starting my PhD in neuroimaging, which has focused on imaging neural networks in Epilepsy and Neurocysticercosis</li>
