--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <div id="page_content">            
         	<h3>About the author:</h3>
             <div class="row">
+                <img class="col" src="img/headshot_2021.png" alt="Headshot of the author, Corey Ratcliffe, taken in 2021.">
                 <p class="col">Corey Ratcliffe is a Phd Student who is currently working on developing network models of epileptogenesis in neurocysticercosis. Based at the University of Liverpool, Corey is collecting data at NIMHANS Bangalore.</p>
             <div/>
         	<h3>Included on this site is:</h3>
