--- a/index.html
+++ b/index.html
@@ -31,14 +31,12 @@
                 <p class="col">Corey Ratcliffe is a Phd Student who is currently working on developing network models of epileptogenesis in neurocysticercosis. Based at the University of Liverpool, Corey is collecting data at NIMHANS Bangalore.</p>
             <div/>
         	<h3>Included on this site is:</h3>
-        	<ul>
-                <li>An overview of and introduction to the work I have done since starting my PhD in neuroimaging, which has focused on imaging neural networks in Epilepsy and Neurocysticercosis</li>
-                <li>Supporting information for presentations and posters</li>
-                <li>A book and music journal</li>
-                <li>A list of recommended software for a wide variety of functions, on Windows, Linux (Ubuntu), and sometimes Android</li>
-                <li>Links to software resources</li>
-                <li>An online C.V.</li>
-                <li>Please excuse the commit history, this is a work in progress</li>
+            <ul>
+                <li><a href="abstracts.html">Abstracts:</a> Links to abstracts and summaries of any work I have been pulicly involved in</li>
+                <li><a href="books.html">Books:</a> Some recommendations for reading material; mostly fiction, including satire and fantasy</li>
+                <li><a href="cv.html">C.V.:</a> A professional summary of myself, also available as a pdf</li>
+                <li><a href="music.html">Music:</a> Some recommendation for listening material; mostly (but not exclusively!) metal</li>
+                <li><a href="software.html">Software:</a> A (hopefully) comprehensive collection of software that has been helpful for me</li>
             </ul>
         </div>
         <footer>
