--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             </div>
         </div>
         <div id="page_content">            
-        	<h3>About the author:</h3>
+            <h3>About the author:</h3>
             <div class="row">
-                <img class="col" src="img/headshot_2021.png" alt="Headshot of the author, Corey Ratcliffe, taken in 2021." style="width:auto;">
+                <img class="col" src="img/headshot_2021.png" alt="Headshot of the author, Corey Ratcliffe, taken in 2021.">
                 <p class="col">Corey Ratcliffe is a Phd Student who is currently working on developing network models of epileptogenesis in neurocysticercosis. Based at the University of Liverpool, Corey is collecting data at NIMHANS Bangalore.</p>
-            <div/>
-        	<h3  style="float:none;">Included on this site is:</h3>
+            </div>
+        	<h3>Included on this site is:</h3>
             <ul>
                 <li><a href="abstracts.html">Abstracts:</a> Links to abstracts and summaries of any work I have been pulicly involved in</li>
                 <li><a href="books.html">Books:</a> Some recommendations for reading material; mostly fiction, including satire and fantasy</li>
