--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <img class="col" src="img/headshot_2021.png" alt="Headshot of the author, Corey Ratcliffe, taken in 2021." style="max-width:20rem;">
                 <p class="col">Corey Ratcliffe is a Phd Student who is currently working on developing network models of epileptogenesis in neurocysticercosis. Based at the University of Liverpool, Corey is collecting data at NIMHANS Bangalore.</p>
             </div>
-        	<h3>Included on this site is:</h3>
+        	<h3>Site Contents:</h3>
             <ul>
                 <li><a href="abstracts.html">Abstracts:</a> Links to abstracts and summaries of any work I have been pulicly involved in</li>
                 <li><a href="books.html">Books:</a> Some recommendations for reading material; mostly fiction, including satire and fantasy</li>
@@ -38,7 +38,7 @@
             </ul>
         </div>
         <footer>
-            <p style="text-align:center;">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
+            <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
             <br/>Contact:
             <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
         </footer>
