--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h3>About the author:</h3>
             <div class="row">
                 <img class="col" src="img/headshot_2021.png" alt="Headshot of the author, Corey Ratcliffe, taken in 2021." style="max-width:20rem;">
-                <p class="col">Corey Ratcliffe is a Phd Student who is currently working on developing network models of epileptogenesis in neurocysticercosis. Based at the University of Liverpool, Corey is collecting data at NIMHANS Bangalore.</p>
+                <p class="col">Corey Ratcliffe is a PhD Student who is currently working towards developing network models of epileptogenesis in neurocysticercosis. Based at the University of Liverpool, collecting data at NIMHANS Bangalore.</p>
             </div>
         	<h3>Site Contents:</h3>
             <ul>
