--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         	<h3>Site Contents:</h3>
             <ul>
-                <li><a href="abstracts.html">Abstracts:</a> Links to abstracts and summaries of any work I have been pulicly involved in</li>
+                <li><a href="abstracts.html">Abstracts:</a> Links to abstracts and summaries of my affiliated projects</li>
                 <li><a href="books.html">Books:</a> Some recommendations for reading material; mostly fiction, including satire and fantasy</li>
                 <li><a href="cv.html">C.V.:</a> A professional summary of myself, also available as a pdf</li>
                 <li><a href="music.html">Music:</a> Some recommendation for listening material; mostly (but not exclusively!) metal</li>
