--- a/cv.html
+++ b/cv.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div id="page_content">
-        	<h3>Coming somewhat soon</h3>
+        	<p class="introtext">Coming somewhat soon</p>
         </div>
         <footer>
             <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
