--- a/acknowledgements.html
+++ b/acknowledgements.html
@@ -26,7 +26,7 @@
         	<h3>Media</h3>
         	<ul>
                 <li>Header image: Used under the free Unsplash license, provided by <a href="https://unsplash.com/@averey?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Robina Weermeijer</a></li>
-                <li>Headshot image: Used with permission, provided by <a href="https://www.instagram.com/conniewatkinsart/">Connie Watkinss</a></li>
+                <li>Headshot image: Used with permission, provided by <a href="https://www.instagram.com/conniewatkinsart/">Connie Watkins</a></li>
             </ul>
         </div>
         <footer>
