--- a/books.html
+++ b/books.html
@@ -26,7 +26,7 @@
             <p class="introtext">Recommendations are made purely based on my own subjective reading experience.  Audiobooks are included based on the content of the book, not the presentation.</p>
             <h3>Audiobooks:</h3>
         	<ul>
-                <li><a href="https://www.goodreads.com/series/40957-the-hitchhiker-s-guide-to-the-galaxy">Adams, D. - The Hitchhiker's Guide to the Galaxy [1 - 5]:</a> Occasionally philosophical, often contemplative, and consistently hilarious, this is a sci-fi series full of imagination and British charm. The audiobooks are marvellously voiced, too.</li>
+                <li><a href="https://www.goodreads.com/series/40957-the-hitchhiker-s-guide-to-the-galaxy">Adams, D. - The Hitchhiker's Guide to the Galaxy [1 - 5]:</a> Occasionally philosophical, often contemplative, and consistently hilarious, this sci-fi series is full of imagination and British charm. The audiobooks are marvellously voiced, too.</li>
             </ul>
             <h3>Print:</h3>
             <ul>
