--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
         <div id="page_content">            
             <h3>About the author:</h3>
             <div class="row">
-                <img class="col" src="img/headshot_2021.png" alt="Headshot of the author, Corey Ratcliffe, taken in 2021." style="max-width:20rem;">
-                <p class="col">Corey Ratcliffe is a PhD Student who is currently working towards developing network models of epileptogenesis in neurocysticercosis. Based at the University of Liverpool, collecting data at NIMHANS Bangalore.</p>
+                <img class="col" src="img/headshot_2021.png" alt="Headshot of the author, Corey Ratcliffe, taken in 2021." style="max-width:20rem;max-height:20rem;min-width:20rem;min-height:20rem;">
+                <p class="col">Corey Ratcliffe is a PhD Student who is currently working towards developing network models of epileptogenesis in neurocysticercosis. Based at the University of Liverpool, collecting data at NIMHANS Bangalore.
+                </br>The intention for this site is twofold. To inform academic peers as a repository of professional-academic information, and to present an honest portrayal of myself as an individual by sharing my thoughts on music and literature. To that end, please don't hesitate to get in touch if you want to discuss anything from epilepsy, to MRI, to r, to extreme metal, to Lord of the Rings!</p>
             </div>
         	<h3>Site Contents:</h3>
             <ul>
