--- a/music.html
+++ b/music.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div id="page_content">
-            <p class="introtext">Recommendations are made purely based on my own subjective listening experience. Artists are grouped by genre umbrella, so there will undoubtedly be some level of subjectivity involved; unfortunately, I can't please everyone.</p>
+            <p class="introtext">Recommendations are made purely based on my own listening experience. Artists are grouped by genre umbrella, so there will undoubtedly be some level of subjectivity involved; unfortunately, I can't please everyone.</p>
             <h3>Avante-garde Metal:</h3>
         	<ul>
                 <li><a href="https://www.youtube.com/watch?v=UZzYxGZ7Hmc">Igorrr:</a> Alias and project of French musician, Gautier Serre, Igorrr is a ludicrous combination of baroque, EDM, and black metal.</li>
@@ -46,7 +46,7 @@
             </ul>
             <h3>Hard Rock:</h3>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=VqoyKzgkqR4">Ghost:</a> Tobias Forge's hard rock project, Ghost, combine blues, doom, and camp aethetics to put out some of the catchiest rock hits ever written.</li>
+                <li><a href="https://www.youtube.com/watch?v=VqoyKzgkqR4">Ghost:</a> Tobias Forge's hard rock project, Ghost, combine blues, doom, and camp aesthetics to put out some of the catchiest rock hits ever written.</li>
             </ul>
             <h3>Industrial:</h3>
             <ul>
