--- a/music.html
+++ b/music.html
@@ -46,11 +46,11 @@
             </ul>
             <h3>Hard Rock:</h3>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=VqoyKzgkqR4">Ghost:</a> Tobias Forge's hard rock project, Ghost, combine blues, doom, and camp aesthetics to put out some of the catchiest rock hits ever written.</li>
+                <li><a href="https://www.youtube.com/watch?v=VqoyKzgkqR4">Ghost:</a> Tobias Forge's hard rock project, Ghost, combine blues and doom with camp aesthetics to put out some of the catchiest rock hits ever written.</li>
             </ul>
             <h3>Industrial:</h3>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=WXv31OmnKqQ">Rammstein:</a> Legendary neue Deutsche härte pioneers, Rammstein, are provocative, dramatic, and unsurpassed in the industrial scene. </li>
+                <li><a href="https://www.youtube.com/watch?v=WXv31OmnKqQ">Rammstein:</a> Legendary neue Deutsche härte pioneers, Rammstein, are provocative, dramatic, and unsurpassed in the industrial scene.</li>
             </ul>
             <h3>Piano Rock and Acoustic Comedy:</h3>
             <ul>
@@ -58,7 +58,7 @@
             </ul>
             <h3>Power Metal:</h3>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=-AFdwoyNT24">Sabaton:</a> Sabaton are a Swedish five-piece who put out catchy (if somewhat cheesy) heavy metal that juxtaposes occassionally bleak historical themes with modern melodic metal trappings.</li>
+                <li><a href="https://www.youtube.com/watch?v=-AFdwoyNT24">Sabaton:</a> Sabaton are a Swedish five-piece who put out catchy (if somewhat cheesy) heavy metal that juxtaposes occasionally bleak historical themes with modern melodic metal trappings.</li>
             </ul>
             <h3>Rave and Hyperpop:</h3>
             <ul>
