--- a/abstracts.html
+++ b/abstracts.html
@@ -26,7 +26,7 @@
             <h3>First author:</h3>
         	<ul>
                 <li><a href="21_subcortical_shape.html">2021 - Subcortical Shape Analysis in Patients with Neurocysticercosis Presenting with Seizures</a></li>
-                <li><a href="22_prognosis_protocol.html">2022 - Clinical Prediction Models for Treatment Outcome in nNewly-diagnosed Epilepsy: Protocol for a Systematic Review</a></li>
+                <li><a href="22_prognosis_protocol.html">2022 - Clinical Prediction Models for Treatment Outcome in Newly-diagnosed Epilepsy: Protocol for a Systematic Review</a></li>
             </ul>
             <h3>Contributing author:</h3>
         	<ul>
