--- a/21_subcortical_shape.html
+++ b/21_subcortical_shape.html
@@ -18,7 +18,7 @@
                 <li><a class = "nav" href="acknowledgements.html">Acknowledgements</a></li>
             </ul>
         	<div id="hero_text">
-        		<h1>Subcortical Shape Analysis in Patients with Neurocysticercosis Presenting with Seizures</h1>
+        		<h1>Subcortical Shape Analysis in Patients with Neurocysticercosis Presenting with Seizures [POSTER]</h1>
         		<h2>Ratcliffe, Anan, de Bézenac, Sinha, Saini, Marson, and Keller, 2021</h2>
             </div>
         </div>
