--- a/22_prognosis_protocol.html
+++ b/22_prognosis_protocol.html
@@ -18,7 +18,7 @@
                 <li><a class = "nav" href="acknowledgements.html">Acknowledgements</a></li>
             </ul>
         	<div id="hero_text">
-        		<h1>Clinical prediction models for treatment outcome in newly-diagnosed epilepsy: Protocol for a systematic review</h1>
+        		<h1>Clinical prediction models for treatment outcome in newly-diagnosed epilepsy: Protocol for a systematic review [PREPRINT]</h1>
         		<h2>Ratcliffe, Marson, Bonnett, and Keller, 2022</h2>
             </div>
         </div>
