--- a/abstracts.html
+++ b/abstracts.html
@@ -30,7 +30,7 @@
             </ul>
             <h3>Contributing author:</h3>
         	<ul>
-                <li><a href=""></a></li>
+                <li><a href="22_JAE_profile.html">2022 - The Cognitive Phenotype of Juvenile Absence Epilepsy and its Heritability: An Investigation of Patients and Unaffected Siblings</a></li>
             </ul>
         </div>
         <footer>
