--- a/abstracts.html
+++ b/abstracts.html
@@ -25,6 +25,7 @@
         <div id="page_content">
             <h3>First author:</h3>
         	<ul>
+                <li><a href="20_GGE_profiles.html">2020 - Cognitive Function in Genetic Generalized Epilepsies: Insights From Neuropsychology and Neuroimaging</a></li>
                 <li><a href="21_subcortical_shape.html">2021 - Subcortical Shape Analysis in Patients with Neurocysticercosis Presenting with Seizures</a></li>
                 <li><a href="22_prognosis_protocol.html">2022 - Clinical Prediction Models for Treatment Outcome in Newly-diagnosed Epilepsy: Protocol for a Systematic Review</a></li>
             </ul>
