--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="abstracts.html">Abstracts:</a> Links to abstracts and summaries of my affiliated projects</li>
                 <li><a href="books.html">Books:</a> Some recommendations for reading material; mostly fiction, including satire and fantasy</li>
                 <li><a href="cv.html">C.V.:</a> A professional summary of myself, also available as a pdf</li>
-                <li><a href="music.html">Music:</a> Some recommendation for listening material; mostly (but not exclusively!) metal</li>
+                <li><a href="music.html">Music:</a> Some recommendations for listening material; mostly (but not exclusively!) metal</li>
                 <li><a href="software.html">Software:</a> A (hopefully) comprehensive collection of software that I use regularly, for myriad purposes</li>
             </ul>
         </div>
