GGE-paper_edits

--- a/20_GGE_profiles.html
+++ b/20_GGE_profiles.html
@@ -19,12 +19,13 @@
             </ul>
         	<div id="hero_text">
         		<h1>Cognitive Function in Genetic Generalized Epilepsies: Insights From Neuropsychology and Neuroimaging</h1>
-        		<h2>Ratcliffe, Wandschneider, Baxendale, Thompson, Koepp, and Caciaglli, 2020</h2>
+        		<h2>Ratcliffe, Wandschneider, Baxendale, Thompson, Koepp, and Caciagli, 2020</h2>
             </div>
         </div>
         <div id="page_content">
             <h3>Abstract</h3>
         	<p>Genetic generalized epilepsies (GGE), previously called idiopathic generalized epilepsies, constitute about 20% of all epilepsies, and include childhood absence epilepsy, juvenile absence epilepsy, juvenile myoclonic epilepsy, and epilepsy with generalized tonic-clonic seizures alone (CAE, JAE, JME, and GGE-GTCS, respectively). GGE are characterized by high heritability, likely underlain by polygenetic mechanisms, which may relate to atypical neurodevelopmental trajectories. Age of onset ranges from pre-school years, for CAE, to early adulthood for GGE-GTCS. Traditionally, GGE have been considered benign, a belief contrary to evidence from neuropsychology studies conducted over the last two decades. In JME, deficits in executive and social functioning are common findings and relate to impaired frontal lobe function. Studies using neuropsychological measures and cognitive imaging paradigms provide evidence for hyperconnectivity between prefrontal and motor cortices, aberrant fronto-thalamo-cortical connectivity, and reduced fronto-cortical and subcortical gray matter volumes, which are associated with altered cognitive performance. Recent research has also identified associations between abnormal hippocampal morphometry and fronto-temporal activation during episodic memory. Longitudinal studies on individuals with newly diagnosed JME have observed cortical dysmaturation, which is paralleled by delayed cognitive development compared to the patients’ peers. Comorbidities and cognitive deficits observed in other GGE subtypes, such as visuo-spatial and language deficits in both CAE and JAE, have also been correlated with atypical neurodevelopment. Although it remains unclear whether cognitive impairment profiles differ amongst GGE subtypes, effects may become more pronounced with disease duration, particularly in absence epilepsies. Finally, there is substantial evidence that patients with JME and their unaffected siblings share patterns of cognitive deficits, which is indicative of an underlying genetic etiology (endophenotype), independent of seizures and anti-epileptic medication.
+            </p>
             <a href="https://www.frontiersin.org/articles/10.3389/fneur.2020.00144/full">Full text available here</a>
         </div>
         <footer>
