abstract_ncc-review

--- a/21_subcortical_shape.html
+++ b/21_subcortical_shape.html
@@ -19,7 +19,7 @@
             </ul>
         	<div id="hero_text">
         		<h1>Subcortical Shape Analysis in Patients with Neurocysticercosis Presenting with Seizures [POSTER]</h1>
-        		<h2>Ratcliffe, Anan, de Bézenac, Sinha, Saini, Marson, and Keller, 2021</h2>
+        		<h2>Ratcliffe, Anan, de Bézenac, ... and Keller, 2021</h2>
             </div>
         </div>
         <div id="page_content">
