--- a/22_JAE_profile.html
+++ b/22_JAE_profile.html
@@ -19,7 +19,7 @@
             </ul>
         	<div id="hero_text">
         		<h1>The cognitive phenotype of juvenile absence epilepsy and its heritability: An investigation of patients and unaffected siblings [PREPRINT]</h1>
-        		<h2>Caciagli, Ratcliffe, Xiao, van Graan, Trimmel, Vollmar, Centeno, Duncan, Baxendale, Thompson, Koepp, and Wandschneider, 2022</h2>
+        		<h2>Caciagli, Ratcliffe, Xiao, ... and Wandschneider, 2022</h2>
             </div>
         </div>
         <div id="page_content">
