--- a/20_GGE_profiles.html
+++ b/20_GGE_profiles.html
@@ -19,7 +19,7 @@
             </ul>
         	<div id="hero_text">
         		<h1>Cognitive Function in Genetic Generalized Epilepsies: Insights From Neuropsychology and Neuroimaging</h1>
-        		<h2>Ratcliffe, Wandschneider, Baxendale, Thompson, Koepp, and Caciagli, 2020</h2>
+        		<h2>Ratcliffe, Wandschneider, ... and Caciagli, 2020</h2>
             </div>
         </div>
         <div id="page_content">
