--- a/abstracts/20_GGE_profiles.html
+++ b/abstracts/20_GGE_profiles.html
@@ -9,13 +9,13 @@
     <div id="page-container">
         <div id="hero_image">
             <ul class="nav">
-                <li><a class = "nav" href="index.html">Home</a></li>
-                <li><a class = "nav" href="abstracts.html">Abstracts</a></li>
-                <li><a class = "nav" href="books.html">Books</a></li>                
-                <li><a class = "nav" href="cv.html">C.V.</a></li>
-                <li><a class = "nav" href="music.html">Music</a></li>
-                <li><a class = "nav" href="software.html">Software</a></li>
-                <li><a class = "nav" href="acknowledgements.html">Acknowledgements</a></li>
+                <li><a class = "nav" href="../index.html">Home</a></li>
+                <li><a class = "nav" href="../abstracts.html">Abstracts</a></li>
+                <li><a class = "nav" href="../books.html">Books</a></li>                
+                <li><a class = "nav" href="../cv.html">C.V.</a></li>
+                <li><a class = "nav" href="../music.html">Music</a></li>
+                <li><a class = "nav" href="../software.html">Software</a></li>
+                <li><a class = "nav" href="../acknowledgements.html">Acknowledgements</a></li>
             </ul>
         	<div id="hero_text">
         		<h1>Cognitive Function in Genetic Generalized Epilepsies: Insights From Neuropsychology and Neuroimaging</h1>
