--- a/abstracts/22_prognosis_protocol.html
+++ b/abstracts/22_prognosis_protocol.html
@@ -9,13 +9,13 @@
     <div id="page-container">
         <div id="hero_image">
             <ul class="nav">
-                <li><a class = "nav" href="index.html">Home</a></li>
-                <li><a class = "nav" href="abstracts.html">Abstracts</a></li>
-                <li><a class = "nav" href="books.html">Books</a></li>                
-                <li><a class = "nav" href="cv.html">C.V.</a></li>
-                <li><a class = "nav" href="music.html">Music</a></li>
-                <li><a class = "nav" href="software.html">Software</a></li>
-                <li><a class = "nav" href="acknowledgements.html">Acknowledgements</a></li>
+                <li><a class = "nav" href="../index.html">Home</a></li>
+                <li><a class = "nav" href="../abstracts.html">Abstracts</a></li>
+                <li><a class = "nav" href="../books.html">Books</a></li>                
+                <li><a class = "nav" href="../cv.html">C.V.</a></li>
+                <li><a class = "nav" href="../music.html">Music</a></li>
+                <li><a class = "nav" href="../software.html">Software</a></li>
+                <li><a class = "nav" href="../acknowledgements.html">Acknowledgements</a></li>
             </ul>
         	<div id="hero_text">
         		<h1>Clinical prediction models for treatment outcome in newly-diagnosed epilepsy: Protocol for a systematic review [PREPRINT]</h1>
