--- a/music.html
+++ b/music.html
@@ -44,13 +44,24 @@
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=OMYe7M26fZg">Anaal Nathrakh:</a> Legendary Birmingham (UK) two-piece grindcore outfit Anaal Nathrakh are the auditory equivalent of being hit by a bus.</li>
             </ul>
+            <h3>Groove Metal:</h3>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=KAaMDm3jxeE">DevilDriver:</a> The band that got me into groove metal, DevilDriver are one of the most fun bands of their kind. Who needs sophistication when you have pure cathartic energy?.</li>
+            </ul>
             <h3>Hard Rock:</h3>
             <ul>
+                <li><a href="https://www.youtube.com/watch?v=xPlqLHcphyw">AC/DC:</a> There's little that hasn't been said about AC/DC over the years. Call it Dad-rock if you like, but whatever you call it, you can't deny it has magnetism and an addictive boyish energy.</li>
                 <li><a href="https://www.youtube.com/watch?v=VqoyKzgkqR4">Ghost:</a> Tobias Forge's hard rock project, Ghost, combine blues and doom with camp aesthetics to put out some of the catchiest rock hits ever written.</li>
+                <li><a href="https://www.youtube.com/watch?v=ojOKGrvXFUE">Motörhead:</a> No band embodies "hard rock 'n roll" better than Motörhead, and no frontman better than Lemmy Kilmister. Truly one of the all-time greats.</li>
             </ul>
             <h3>Industrial:</h3>
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=WXv31OmnKqQ">Rammstein:</a> Legendary neue Deutsche härte pioneers, Rammstein, are provocative, dramatic, and unsurpassed in the industrial scene.</li>
+            </ul>
+            <h3>Melodic Death Metal:</h3>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=goVIhhH165k">In Flames:</a> One of the most well-known names in metal, this Gothenburg band are pioneers of the melodeath genre.</li>
+                <li><a href="https://www.youtube.com/watch?v=RIF-eXs-oxk">Orbit Culture:</a> Relative newcomers to melodeath, Orbit Culture combine deathcore aesthetics with some of the catchiest and heaviest melodeath around. A personal favourite.</li>
             </ul>
             <h3>Piano Rock and Acoustic Comedy:</h3>
             <ul>
