--- a/cv.html
+++ b/cv.html
@@ -27,7 +27,7 @@
             <div class="row">
                 <img class="col" src="img/headshot_2021.png" alt="Headshot of the author, Corey Ratcliffe, taken in 2021." style="max-width:20rem;max-height:20rem;min-width:20rem;min-height:20rem;">
                 <p class="col">Corey Ratcliffe is a PhD Student who is currently working towards developing network models of epileptogenesis in neurocysticercosis. Based at the University of Liverpool, collecting data at NIMHANS Bangalore.
-                </br>The intention for this site is threefold; for it to function as a professional-academic portfolio, a resource for those new to modern neuroscience practices and methods, and an introduction to me outside of academia, in the form of book & music blog. To this end, please feel free to get in touch with me--via my contact address in the page footer--if you'd like any further information regarding my work or my interests. Cheers!
+                </br>The intention for this site is threefold; for it to function as a professional-academic portfolio, a resource for those new to modern neuroscience practices and methods, and an introduction to me outside of academia, in the form of a book & music blog. To this end, please feel free to get in touch with me--via my contact address in the page footer--if you'd like any further information regarding my work or my interests. Cheers!
             </div>
         	<p class="introtext">C.V. coming somewhat soon</p>
         </div>
