--- a/music.html
+++ b/music.html
@@ -32,6 +32,10 @@
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=JjNYmxdkd1w">Zeal and Ardor:</a> A Swiss six-piece, playing gospel and blues infused black metal.</li>
             </ul>
+            <h3>Cabaret:</h3>
+        	<ul>
+                <li><a href="https://www.youtube.com/watch?v=hp-NRJ4JFdE">Voltaire:</a> Aurelio Voltaire is dark, camp, nerdy fun. Songs with subject matter from Star Trek to necrophilia attest that gothic does not mean dreary.</li>
+            </ul>
             <h3>Death Metal:</h3>
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=5sV2zTMON6E">1914:</a> A Ukrainian five-piece, whose blackened-death metal is as heavy as the WWI themed lyrical focus.</li>
@@ -66,10 +70,15 @@
             <h3>Piano Rock and Acoustic Comedy:</h3>
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=IZeWPScnolo">Tim Minchin:</a> Marrying comedy and piano rock, Tim Minchin's music is a celebration of both, with a wit that stays on the accessible side of obnoxious.</li>
+                <li><a href="https://www.youtube.com/watch?v=jeWZhuzFMM8">Ben Folds:</a> Slice of life comedy with the sort flair that only a very skilled pianist can weave into such light-hearted tracks.</li>
             </ul>
             <h3>Power Metal:</h3>
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=-AFdwoyNT24">Sabaton:</a> Sabaton are a Swedish five-piece who put out catchy (if somewhat cheesy) heavy metal that juxtaposes occasionally bleak historical themes with modern melodic metal trappings.</li>
+            </ul>
+            <h3>Rap and Hip-hop:</h3>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=vWaljXUiCaE">Run the Jewels:</a> An incredible collaboration between EL-P and Killer Mike, RTJ are just incapable of writing a bad track. Hilarious, slick, and aggressive, this east-coast/southern hip-hop fusion is one not to miss. A personal favourite.</li>
             </ul>
             <h3>Rave and Hyperpop:</h3>
             <ul>
