--- a/music.html
+++ b/music.html
@@ -70,7 +70,7 @@
             <h3>Piano Rock and Acoustic Comedy:</h3>
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=IZeWPScnolo">Tim Minchin:</a> Marrying comedy and piano rock, Tim Minchin's music is a celebration of both, with a wit that stays on the accessible side of obnoxious.</li>
-                <li><a href="https://www.youtube.com/watch?v=jeWZhuzFMM8">Ben Folds:</a> Slice of life comedy with the sort flair that only a very skilled pianist can weave into such light-hearted tracks.</li>
+                <li><a href="https://www.youtube.com/watch?v=jeWZhuzFMM8">Ben Folds:</a> Slice of life comedy with style and flair that only a very skilled pianist can weave into such light-hearted music.</li>
             </ul>
             <h3>Power Metal:</h3>
             <ul>
