--- a/music.html
+++ b/music.html
@@ -26,7 +26,7 @@
             <p class="introtext">Recommendations are made purely based on my own listening experience. Artists are grouped by genre umbrella, so there will undoubtedly be some level of subjectivity involved; unfortunately, I can't please everyone.</p>
             <h3>Avante-garde Metal:</h3>
         	<ul>
-                <li><a href="https://www.youtube.com/watch?v=UZzYxGZ7Hmc">Igorrr:</a> Alias and project of French musician, Gautier Serre, Igorrr is a ludicrous combination of baroque, EDM, and black metal.</li>
+                <li><a href="https://www.youtube.com/watch?v=UZzYxGZ7Hmc">Igorrr:</a> Alias and project of French musician, Gautier Serre, Igorrr is a ludicrous combination of baroque, EDM, and black metal. A personal favourite.</li>
             </ul>
             <h3>Black Metal:</h3>
             <ul>
