--- a/music.html
+++ b/music.html
@@ -50,7 +50,7 @@
             </ul>
             <h3>Groove Metal:</h3>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=KAaMDm3jxeE">DevilDriver:</a> The band that got me into groove metal, DevilDriver are one of the most fun bands of their kind. Who needs sophistication when you have pure cathartic energy?.</li>
+                <li><a href="https://www.youtube.com/watch?v=KAaMDm3jxeE">DevilDriver:</a> The band that got me into groove metal, DevilDriver are one of the most fun bands of their kind. Who needs sophistication when you have pure cathartic energy?</li>
             </ul>
             <h3>Hard Rock:</h3>
             <ul>
