--- a/music.html
+++ b/music.html
@@ -60,7 +60,7 @@
             </ul>
             <h3>Industrial:</h3>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=WXv31OmnKqQ">Rammstein:</a> Legendary neue Deutsche härte pioneers, Rammstein, are provocative, dramatic, and unsurpassed in the industrial scene.</li>
+                <li><a href="https://www.youtube.com/watch?v=WXv31OmnKqQ">Rammstein:</a> Legendary neue Deutsche härte pioneers Rammstein are provocative, dramatic, and unsurpassed in the industrial scene.</li>
             </ul>
             <h3>Melodic Death Metal:</h3>
             <ul>
