--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
             <br/>Contact:
             <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
+            <a rel="me" href="https://qoto.org/@c_ratcliffe">Mastodon</a>
         </footer>
     </div>
 </body>
