--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <footer>
             <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
             <br/>Contact:
-            <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
-            <a class="footer" rel="me" href="https://qoto.org/@c_ratcliffe">@c_ratcliffe@qoto.org</a>
+            <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a>
+            <a class="footer" rel="me" href="https://qoto.org/@c_ratcliffe">@c_ratcliffe@qoto.org</a></p>
         </footer>
     </div>
 </body>
