--- a/abstracts.html
+++ b/abstracts.html
@@ -29,6 +29,7 @@
                 <li><a href="abstracts/21_shape_poster.html">2021 - Subcortical Shape Analysis in Patients with Neurocysticercosis Presenting with Seizures</a></li>
                 <li><a href="abstracts/22_prognosis_protocol.html">2022 - Clinical Prediction Models for Treatment Outcome in Newly-diagnosed Epilepsy: Protocol for a Systematic Review</a></li>
                 <li><a href="abstracts/22_NCC_review.html">2022 - Neurocysticercosis-related Seizures: Imaging Biomarkers</a></li>
+                <li><a href="abstracts/23_imgsynth_poster.html">2023 - Reconstruction of 2D MRI using SynthSR and DL+DiReCT for Subcortical Shape Analysis in Epilepsy</a></li>
             </ul>
             <h3>Contributing author:</h3>
         	<ul>
