--- a/abstracts/23_imgsynth_poster.html
+++ b/abstracts/23_imgsynth_poster.html
@@ -31,14 +31,14 @@
             
             A Dice similarity coefficient was computed between the FreeSurfer parcellations of the raw scans and synthesised images, and regional morphometric and volumetric measures derived from the 2D scans, 3D scans, and synthesised images were compared. Following this, morphometric abnormalities associated with IGE were identified by comparing the FSL-ANAT surfaces between the patients and controls.
             </p>
-            <img class="figure" src="../img/23_imgsynth_fig1.png" alt="Figure 1. Heatmap of the Dice similarities between parcellations created from 3D scans, and from 2D-, DL+DiReCT-, and SynthSR-derived analogues.">
+            <img class="figure" src="../img/23_imgsynth_fig1.jpeg" alt="Figure 1. Heatmap of the Dice similarities between parcellations created from 3D scans, and from 2D-, DL+DiReCT-, and SynthSR-derived analogues.">
             <p class="captiontext"><strong>Figure 1.</strong> Regional averages were computed from a subset of our sample, comprised of 10 individuals with IGE and 10 healthy controls. Averaged correlations (r) of the regional volumes and thicknesses of the 3D-derived parcellations with the 2D-, DL+DiReCT-, and SynthSR-derived parcellations are also presented.
             <h3>Results</h3>
         	<p>Dice coefficients suggested a low overall similarity between the cortices of the 3D scans and the 2D scans/synthesised images (averaged across 176 cortical regions; raw 2D = .215, DL+DiReCT = .198, SynthSR = .217), which was higher in the subcortical structures (averaged across 15 subcortical structures; 2D = .361, DL+DiReCT = .318, SynthSR = .349; see figure 1). Regional cortical measurements derived from the 2D scans and synthesised images were highly correlated with those of the 3D scans (volume: 2D = .990, DL+DiReCT = .989, SynthSR = .985, all p < .001; thickness: 2D = .903, DL+DiReCT = .922, SynthSR = .803, all p < .001).
                 
             The 3D scans showed significant regional surface deflation (i.e. shape changes, regional atrophy; see figure 2) of the left accumbens, the right thalamus, and the caudate and putamen bilaterally in the individuals with IGE (males = 14, mean age = 32.16) when compared to the healthy controls (males = 16, mean age = 32.13). Analysis of the 2D scans failed to detect shape changes in any structure, whereas analysis of the synthesised images revealed significant shape changes, some of which were not found in the analysis of the 3D scans.
             </p>
-            <img class="figure" src="../img/23_imgsynth_fig2.png" alt="Figure 2. Results of FSL-randomise comparisons of subcortical shapes between 31 individuals with IGE and 39 healthy controls.">
+            <img class="figure" src="../img/23_imgsynth_fig2.jpeg" alt="Figure 2. Results of FSL-randomise comparisons of subcortical shapes between 31 individuals with IGE and 39 healthy controls.">
             <p class="captiontext"><strong>Figure 1.</strong> Sub-cortical shape was measured in 3D scans, 2D scans, DL+DiReCT-derived images, and SynthSR-derived images, and the shape changes are presented colour-coded to image type, post-threshold. 
             </p>
             <h3>Conclusions</h3>
